@@ -7,10 +7,12 @@ AUX aegisub-3.0-pre-external-libass.patch 2018 RMD160 b2d245fa0c90e868c26168ab7c
 AUX aegisub-3.0-pre-fix-ln-install.patch 447 RMD160 6109c0814f32b09c7877a2c6521a1eb9078d59c9 SHA1 f6182e6a34b7ee4584b30811cfb4f9fd575eac97 SHA256 a8283c05cf20bdffc4108a2495b0a3214394800c8a7d8e7e5b46e493273b7ac2
 AUX aegisub-3.0-pre-include-stdint.h.patch 312 RMD160 2d126da25046079cfbac52488067cf97d3346eda SHA1 990e7d8cd77314bca503a82409d66a966c84f69e SHA256 0e18726d9c348f0d16fdd54e93cadf913fecd8b4043618a3d79a5898a542a5cf
 DIST aegisub-2.1.8.tar.gz 2431099 RMD160 d2630f838a9e8720c65d9f18010e80e17fb8183b SHA1 70c51a21c86f73d744fcf1e080e89d98885e557c SHA256 a67356e5c4fa376738d363f1cf5e50aa74e6b69e76a089ed0442bf6d7390d769
+DIST aegisub-2.1.9_pre5440.tar.xz 1697088 RMD160 1e70f9581a9147252ed96843b780d7af3506041b SHA1 c32b4d84e40f22f854310b966ee9aa768bc952dd SHA256 8bbf637de2962691e5f2a2c67710418b887b83f1d085bf8d29ee5a47e688f19a
 DIST aegisub-3.0_pre4897.tar.xz 1743732 RMD160 7ff9c6c8c51673118a6c1a4f8d18506b885ba1f0 SHA1 69854944f57202c2afb3a24edf60ca85f535fe29 SHA256 d4d374e815b907403ad40438f54567e3e05d79e18c175def31107273f1c8e7af
 EBUILD aegisub-2.1.8.ebuild 1738 RMD160 d4010837c8ace29b00bb33eec2875d9047e32f27 SHA1 b12259f80b8d68622f0126455b61003f52fe9079 SHA256 b1f38a053c108b8d37fd52c1ee3b5f05fba6f4b367ae335ab29ae336e73f225a
-EBUILD aegisub-2.1.9999.ebuild 1563 RMD160 76a5a5900dc3c88dfd16dae07c6138949be7aff6 SHA1 52413115b373c86f232dd1e5a7835b145f0edac4 SHA256 d18950da8f1b3fa2bea4ab0bffe3497da8ff56b15e6ffac71fb1cc38f761a407
-EBUILD aegisub-3.0_pre4897.ebuild 2206 RMD160 08b878247d2a93fa7407e5faa54ca5fcb6f3ade4 SHA1 0152226d4f23efd22555ff1c884d15d222eb1d44 SHA256 337a9097f408fa929bc0a463f896dda5180795d780380b310df35255efc224bf
-EBUILD aegisub-9999.ebuild 1803 RMD160 f7e0250955fdaba181aaedb27dee3198615a7418 SHA1 66f4d867c4dec783378ef3c69784d00b7e9e34b1 SHA256 d57b9bf09b3af161fa5aa526f87892c32d97fb65ad3303298ca3bb1f1f3854cb
-MISC ChangeLog 1070 RMD160 184e6066ecaf3dbe1b3535c825adc25feadc228f SHA1 f8a330090475f563c1411a21bd251f8e13cd8897 SHA256 5b6d8fac0ba4ce87ce2df47231fcabf15dcf95c02740c2ccb31712a1b4de4bcf
+EBUILD aegisub-2.1.9999.ebuild 1478 RMD160 d4196bafa270c19d34655694a62a8e8525c3a35a SHA1 3cf27dad3d5d66c257278a44f0737dba0003f252 SHA256 970edea6be46d95b2d90e0807ffdf61eefe50236d320abe2e8cb2d5ba9930d2c
+EBUILD aegisub-2.1.9_pre5440.ebuild 1406 RMD160 b9d7bcb64f0d7df52f2d6da3beae68f5fb466b67 SHA1 b105f2f8bcfa5eb3da8743699bfb92c3f59f5849 SHA256 0017bfffa0cb363c1e04d55c687a9b5a6980bbdd5a2224f6652d130f89d8273c
+EBUILD aegisub-3.0_pre4897.ebuild 2213 RMD160 32cd396bd60a44ddc73d14b09567f3eda5cb424e SHA1 09efbf59b60ca6edc33f96f9ffa2df43c444a9f8 SHA256 74da88964dbd82f667facc7fda5369d43d15784b69e12b229cf3e58a86b3c54f
+EBUILD aegisub-9999.ebuild 1810 RMD160 5bf3e56aae7bb649e37343ed89241b7bab6a896d SHA1 f178b7aac5f03d0ff2dbfa1fc04742d25b133c67 SHA256 280cf9f832b23c840f509434985765505793a1935406a264d82f02c37417e7b9
+MISC ChangeLog 1285 RMD160 6421ce49a7ee2a6b67a74498feb2d14e5b461afd SHA1 2d4adc86547f75c20548be06a2141f28ec8c67cc SHA256 477c3050a08058a2f604e72ec4b51e2bb03cb3fa2fb00139097e810d350a1bbb
 MISC metadata.xml 248 RMD160 2418fc56f477393d0e1091455ff5523b58c07a83 SHA1 834f92f9ff1f64ceaac6c39e835ea63873d03d51 SHA256 baa352e20702c6ad701749c41aa0a8cce9c1fc62511a96b9adefc42a788026ab
