@@ -21,7 +21,7 @@ IUSE="alsa debug +ffmpeg lua nls openal oss portaudio pulseaudio spell"
 IUSE+="${LANGS// / linguas_}"
 
 RDEPEND="
-	x11-libs/wxGTK:${WX_GTK_VER}[X,opengl]
+	x11-libs/wxGTK:${WX_GTK_VER}[X,opengl,debug?]
 	>=media-libs/libass-0.9.7[fontconfig]
 	>=media-libs/fontconfig-2.4.2
 	media-libs/freetype:2
